Alignment issue fixed (#5735)

--- a/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_host-detail-datatable.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_host-detail-datatable.scss
@@ -1,5 +1,5 @@
 .host-detail-wrapper {
-  height: 77vh;
+  height: calc(100vh - 215px);
   .right-zone .host-properties-box .blue.rsa-content-accordion h3 {
     color: text-color(secondary);
   }
